--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <img src="logo/fsm-logo_5x5.png" alt="Logo FM" style="padding-top: 5px; padding-right: 100px;">
         <!-- Menu goes here -->
         <a href="#Contact">Contact Us | ርኸቡና</a>
+        <a href="#About">About Us | ብዛዕባና</a>
         <a href="#Fruit">Fruit | ፉሩት</a>
         <a href="#Oven">Oven | መገጎ</a>
         <a href="#Meat">Meat | ስጋ</a>
