--- a/start-opl/start-opl/index.html
+++ b/start-opl/start-opl/index.html
@@ -44,7 +44,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="#">
-                                <img src="assets/images/" alt="Logo">
+                                <img src="assets/images/fsm-logo_5x5.png" alt="Logo">
                             </a>
 
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,13 +59,19 @@
                                         <a class="page-scroll" href="#home">HOME</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#service">SERVICES</a>
+                                        <a class="page-scroll" href="#service">Légumes | ኣሕምልቲ</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#pricing">PRICING</a>
+                                        <a class="page-scroll" href="#pricing">Meat | ስጋ</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#contact">CONTACT</a>
+                                        <a class="page-scroll" href="#contact">Oven | መገጎ</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="page-scroll" href="#pricing">Fruit | ፉሩት</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="page-scroll" href="#contact">Contact Us | ርኸቡና</a>
                                     </li>
                                 </ul>
                             </div>
