index, legume and style files are modified

--- a/meat.html
+++ b/meat.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
@@ -14,7 +14,7 @@
   <meta name="msapplication-TileColor" content="#2d89ef">
   <meta name="msapplication-config" content="favicons/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
-  
+
   <link href="https://fonts.googleapis.com/css?family=Alegreya:400,400i,900,900i&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
@@ -22,58 +22,93 @@
 </head>
 
 <body>
-    <header>
-      <!-- logo goes here -->
-      <img class="logo-figure" src="assets/logo/fsm-logo_5x5.png" alt="Logo FM">
-      <Menu class="menu">
-        <!-- Menu starts here -->
-        <a class="menu-item"  href="index.html">Home</a>
-        <a class="menu-item"  href="fruit.html">Fruit </a>
-        <a class="menu-item"  href="oven.html">Oven </a>
-        <a class="menu-item active"  href="meat.html">Meat </a>
-        <a class="menu-item"  href="legume.html">Légumes </a>
-        <a class="menu-item"  href="about.html">About </a> 
-        <a class="menu-item" href="contact.html">Contact </a>
-      
-      </Menu>
-    </header>
+  <header>
+    <!-- logo goes here -->
+    <img class="logo-figure" src="assets/logo/fsm-logo_5x5.png" alt="Logo FM">
+    <Menu class="menu">
+      <!-- Menu starts here -->
+      <a class="menu-item" href="index.html">Home</a>
+      <a class="menu-item" href="fruit.html">Fruit </a>
+      <a class="menu-item" href="oven.html">Oven </a>
+      <a class="menu-item active" href="meat.html">Meat </a>
+      <a class="menu-item" href="legume.html">Légumes </a>
+      <a class="menu-item" href="about.html">About </a>
+      <a class="menu-item" href="contact.html">Contact </a>
 
-    <main>
-     <!-- first row goes here  -->
-        <a name="Meat"><hr></a>
-        <h1> Meat | ስጋ</h1>
-        <div class="row_img">
-          <div class="column_img" style="border-image: 30 round">
-            <img src="assets/images/Row2/AgneauEntier.png" alt="AgneauEntier" style="width:100%">
-            <imgcaption>AgneauEntie | ሙሉእ በጊዕ</imgcaption>
-          </div>
-          <div class="column_img">
-            <img src="assets/images/Row2/Côtelettes d'agneau.png" alt="Côtelettes" style="width:100%">
-            <imgcaption>Côtelettes | ኮተለቲ</imgcaption>
-          </div>
-          <div class="column_img">
-            <img src="assets/images/Row2/Meat-Lamb.png" alt="Meat-Lamb" style="width:100%">
-            <imgcaption>Meat-Lamb | ስጋ በጊዕ</imgcaption>
-          </div>
-          <div class="column_img">
-            <img src="assets/images/Row2/Patte-d-agneau.png" alt="Patte-d-agneau" style="width:100%">
-            <imgcaption style="text-align: center">Patte-d-agneau | ዳሕረዋይ ሙሉእ እግሪ</imgcaption>
-          </div>
-          <div class="column_img">
-            <img src="assets/images/Row2/Viande de boeuf.png" alt="Viande de boeuf" style="width:100%">
-            <imgcaption>Boeuf | ስጋ ብዕራይ</imgcaption>
-          </div>
-        </div>
-        <h2>Where does our meet and meeat procudts come from?</h2>
-        <p>
-          Buy local or import meat & meat products from healthy and naturally cultivated animals to 
-          meet customer requirement while operating in an environmental responsible manner.
-        </p>
+    </Menu>
+  </header>
 
+  <main>
+    <!-- first row goes here  -->
+    <section class="row_img">
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/00_viande3em.png" alt="">
+        <h3>Boucherie 1</h3>
+      </a>
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/01_viande2em.png" alt="">
+        <h3>Boucherie 2</h3>
+      </a>
 
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/02_agneau-boeuf.png" alt="">
+        <h3>Boucherie 3</h3>
+      </a>
+
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/03_entier-cotelettes.png" alt="">
+        <h3>Boucherie 4</h3>
+      </a>
+
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/04_lamb-meat.png" alt="">
+        <h3>Boucherie 5</h3>
+      </a>
+
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/05_kidney-liver.png" alt="">
+        <h3>Boucherie 6</h3>
+      </a>
+
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/06_viande1er.png" alt="">
+        <h3>Boucherie 7</h3>
+      </a>
+
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/07_steak.png" alt="">
+        <h3>Boucherie 8</h3>
+      </a>
+
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/08_steak1er.png" alt="">
+        <h3>Boucherie 9</h3>
+      </a>
+
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/09_tripe.png" alt="">
+        <h3>Boucherie 10</h3>
+      </a>
+
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/10_poultry1er.png" alt="">
+        <h3>Boucherie 11</h3>
+      </a>
+
+      <a class="column_img" href="#" class="image featured">
+        <img src="assets/images/meat/11_poultry2em.png" alt="">
+        <h3>Boucherie 12</h3>
+      </a>
+
+      <h2>Where does our meet and meat procudts come from?</h2>
+      <p>
+        Buy local or import meat & meat products from healthy and naturally cultivated animals to
+        meet customer requirement while operating in an environmental responsible manner.
+      </p>
+    </section>
   </main>
   <div class="copyright">
-    <div>Copyright &copy; 2019 Yohannes Zewde @powercoders</div>        
+    <div>Copyright &copy; 2019 Yohannes Zewde @powercoders</div>
   </div>
   <button id="myBtn"><a href="#top" style="color: white">&#8613; Top &#8613;</a></button>
 </body>
