--- a/index.html
+++ b/index.html
@@ -47,84 +47,26 @@
       <p style="text-align: justify">
         In the spirit of pleasures of natural, fresh and healthy animal and plant products,
         good wine, good atmosphere and enjoyment the Family Supermarket offers you relaxed hospitality.
-        Our motto is . <br>
-        <h1><center>"Stay Healthy and Have fun!"</center></h1>
+        Our motto is : <h1>
+          <center>"Stay Healthy and Have fun!"</center>
+        </h1>
       </p>
       <p>
-          The attractive features of the Family Supermarket are characterized by warm colors and an atmospheric lighting
-          concept. A fresh, regional or imported products of the season meets a wide selection at a good faire price.
-          For a good start to the day, a rich breakfast buffet is served each morning at the bar of Family Supermarket.
+        The attractive features of the Family Supermarket are characterized by warm colors and an atmospheric lighting
+        concept. A fresh, regional or imported products of the season meets a wide selection at a good faire price.
+        For a good start to the day, a rich breakfast buffet is served each morning at the bar of Family Supermarket.
       </p>
       <p>
-         We also recommend to not only visit our supermarket, but to visit our Bar too.
+        We also recommend to not only visit our supermarket, but to visit our Bar too.
         <strong>Stay Healthy and Have fun!</strong>.
       </p>
     </div>
     <!-- first row goes here  -->
-    <a name="DesLegumes">
-      <hr></a>
-    <h1>Des Légumes ኣሕምልቲ</h1>
-    <div class="row_img">
-      <div class="column_img">
-        <img src="assets/images/Row 1/Tomato.png" alt="Tomato" style="width:25%">
-        <imgcaption>Tomato | ኮሚደረ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Row 1/Potato.png" alt="Potato" style="width:25%">
-        <imgcaption>Potato | ድንሽ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Row 1/Cauliflower.png" alt="Cauliflower" style="width:25%">
-        <imgcaption>Cauliflower | ካብሎ ፍዮሪ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Row 1/Carrot.png" alt="Carrot" style="width:25%">
-        <imgcaption>Carrot | ካሮቲ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Row 1/Broccoli.png" alt="Broccoli" style="width:25%">
-        <imgcaption>Broccoli | ብሮኮሊ </imgcaption>
-      </div>
-      <h2>Where does our vegetable procudts come from?</h2>
-      <p>
-        Buy local or import meat & meat products from healthy and naturally cultivated animals to meet customer
-        requirement while operating in an environmental responsible manner.
-      </p>
-    </div>
-
-
-    <a name="Meat">
-      <hr></a>
-    <h1> Meat | ስጋ</h1>
-    <div class="row_img">
-      <div class="column_img" style="border-image: 30 round">
-        <img src="assets/images/Row2/AgneauEntier.png" alt="AgneauEntier" style="width:100%">
-        <imgcaption>AgneauEntie | ሙሉእ በጊዕ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Row2/Côtelettes d'agneau.png" alt="Côtelettes" style="width:100%">
-        <imgcaption>Côtelettes | ኮተለቲ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Row2/Meat-Lamb.png" alt="Meat-Lamb" style="width:100%">
-        <imgcaption>Meat-Lamb | ስጋ በጊዕ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Row2/Patte-d-agneau.png" alt="Patte-d-agneau" style="width:100%">
-        <imgcaption style="text-align: center">Patte-d-agneau | ዳሕረዋይ ሙሉእ እግሪ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Row2/Viande de boeuf.png" alt="Viande de boeuf" style="width:100%">
-        <imgcaption>Boeuf | ስጋ ብዕራይ</imgcaption>
-      </div>
-    </div>
     <h2>Where does our meet and meeat procudts come from?</h2>
     <p>
       Buy local or import meat & meat products from healthy and naturally cultivated animals to
       meet customer requirement while operating in an environmental responsible manner.
     </p>
-    <a name="Oven">
-      <hr></a>
     <!-- New Row for Oven -->
     <h1> Oven | መገጎ</h1>
     <div class="row_img, center" style="background-color: coral">
@@ -140,41 +82,6 @@
     </p>
 
 
-
-    <!-- this is a third row-->
-
-    <a name="Fruit">
-      <hr></a>
-    <h1> Fruit | ፉሩት</h1>
-    <div class="row_img">
-      <div class="column_img" style="border-image: 30 round">
-        <img src="assets/images/Fruit/Apple.png" alt="AgneauEntier" style="width:100%">
-        <imgcaption>Applee | ሙሉእ በጊዕ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Fruit/Avocado.png" alt="Côtelettes" style="width:100%">
-        <imgcaption>Avocado | ኣቮካ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Fruit/Banana.png" alt="Meat-Lamb" style="width:100%">
-        <imgcaption>Banana | በናና</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Fruit/Mango.png" alt="Patte-d-agneau" style="width:100%">
-        <imgcaption>Mango | ማንጉስ</imgcaption>
-      </div>
-      <div class="column_img">
-        <img src="assets/images/Fruit/Orange.png" alt="Viande de boeuf" style="width:100%">
-        <imgcaption>Orange | ኣራንሺ</imgcaption>
-      </div>
-    </div>
-    <h2>Where does our meet and meeat procudts come from?</h2>
-    <p>
-      Buy local or import meat & meat products from healthy and naturally cultivated animals to
-      meet customer requirement while operating in an environmental responsible manner.
-    </p>
-
-
     <!-- this is a third row  -->
 
     <!-- CONTACT-->
@@ -185,27 +92,19 @@
     <h1>Contact</h1>
 
     <footer class="row_footer">
-      <div class="column_footer_1">
+      <section class="column_footer_1">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d714.1630714212852!2d6.8225395504361535!3d47.102371397729996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478dfb38eef9ff85%3A0x37e77407c7866de6!2sRue%20du%20Progr%C3%A8s%2063A%2C%202300%20La%20Chaux-de-Fonds!5e1!3m2!1sen!2sch!4v1571693759428!5m2!1sen!2sch"
+          frameborder="50" allowfullscreen="">
+        </iframe>
         <address style="font-size: 20px">
           <center style="padding-right: 100px;">Notre adresse <br>
             Rue du Progrès 63A, 2300 La Chaux de Fonds<br><br>
           </center>
         </address>
-
-
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d714.1630714212852!2d6.8225395504361535!3d47.102371397729996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478dfb38eef9ff85%3A0x37e77407c7866de6!2sRue%20du%20Progr%C3%A8s%2063A%2C%202300%20La%20Chaux-de-Fonds!5e1!3m2!1sen!2sch!4v1571693759428!5m2!1sen!2sch"
-          width="95%" height="425" frameborder="50"
-          style="border:20px solid whitesmoke; border-style: groove; border-radius: 2%" allowfullscreen="">
-        </iframe>
-
-
-
-      </div>
-      <div class="column_footer_2">
-        <time><b>
-            <center>Nos horaires</center>
-          </b></time>
+      </section>
+      <section class="column_footer_2">
+        <h1><center>Nos horaires</center></h1>
         <time>Lundi: 7h30 - 20h00</time><br>
         <time>Mardi: 7h30 - 20h00</time><br>
         <time>Mercredi: 7h30 - 20h00</time><br>
@@ -214,26 +113,19 @@
         <time>Samdi: 10h00 - 21h00</time><br>
         <time>Dimanche: 10h00 - 22h00</time><br>
         <time></time><br>
-        <time><b>
-            <center>On Social Media</center>
-          </b></time>
-        <div class="socialMedia">
+      </section>
+        <section class="column_footer_3">
+          <h1><center>On Social Media</center></h1>
           <a href="" title="Facebook">
-            <img src="assets/Icons/facebook.png" alt="Facebook" class="image" style="width:70%"></a><br>
-        </div>
-        <div class="socialMedia">
-
+            <img src="assets/Icons/facebook.png" alt="Facebook" class="image" style="width:20%"></a><br>
           <a href="" title="Youtube">
-            <img src="assets/Icons/youtube.png" alt="Youtube" class="image" style="width:70%">
+            <img src="assets/Icons/youtube.png" alt="Youtube" class="image" style="width:20%">
           </a><br>
-
-        </div>
-        <div class="socialMedia">
           <a href="" title="Twitter">
-            <img src="assets/Icons/twitter.png" alt="Twitter" class="image" style="width:70%">
+            <img src="assets/Icons/twitter.png" alt="Twitter" class="image" style="width:20%">
           </a><br>
-        </div>
-      </div>
+        </section>
+      
       <!-- Just note
 Mega menu 
 How can a custemer edit a text /or ornot image/ but not the div? or the design?
