index and style files are modified

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   </header>
 
   <main>
-    <div class="content">
-      <h1 style="text-align: center">FAMILY SUPERMARKET <strong>healthy products, good atmosphere!</strong></h1>
+    <div>
+      <h1 style="text-align: center">FAMILY SUPERMARKET <br> <strong>healthy products, good atmosphere!</strong></h1>
       <h2>
         The procutss of <strong>Family Supermarket</strong> at La Chaux de Fonds
         is knows by its natural and fresh products
@@ -95,7 +95,7 @@
       <section class="column_footer_1">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d714.1630714212852!2d6.8225395504361535!3d47.102371397729996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478dfb38eef9ff85%3A0x37e77407c7866de6!2sRue%20du%20Progr%C3%A8s%2063A%2C%202300%20La%20Chaux-de-Fonds!5e1!3m2!1sen!2sch!4v1571693759428!5m2!1sen!2sch"
-          frameborder="50" allowfullscreen="">
+          width="75%" height="75%" frameborder="50" allowfullscreen="">
         </iframe>
         <address style="font-size: 20px">
           <center style="padding-right: 100px;">Notre adresse <br>
@@ -104,7 +104,9 @@
         </address>
       </section>
       <section class="column_footer_2">
-        <h1><center>Nos horaires</center></h1>
+        <h1>
+          <center>The family Supermarket horaires</center>
+        </h1>
         <time>Lundi: 7h30 - 20h00</time><br>
         <time>Mardi: 7h30 - 20h00</time><br>
         <time>Mercredi: 7h30 - 20h00</time><br>
@@ -114,18 +116,20 @@
         <time>Dimanche: 10h00 - 22h00</time><br>
         <time></time><br>
       </section>
-        <section class="column_footer_3">
-          <h1><center>On Social Media</center></h1>
-          <a href="" title="Facebook">
-            <img src="assets/Icons/facebook.png" alt="Facebook" class="image" style="width:20%"></a><br>
-          <a href="" title="Youtube">
-            <img src="assets/Icons/youtube.png" alt="Youtube" class="image" style="width:20%">
-          </a><br>
-          <a href="" title="Twitter">
-            <img src="assets/Icons/twitter.png" alt="Twitter" class="image" style="width:20%">
-          </a><br>
-        </section>
-      
+      <section class="column_footer_3">
+        <h1>
+          <center>The family Supermarket on Social Media</center>
+        </h1>
+        <a href="" title="Facebook">
+          <img src="assets/Icons/facebook.png" alt="Facebook" class="image" style="width:100%"></a><br>
+        <a href="" title="Youtube">
+          <img src="assets/Icons/youtube.png" alt="Youtube" class="image" style="width:100%">
+        </a><br>
+        <a href="" title="Twitter">
+          <img src="assets/Icons/twitter.png" alt="Twitter" class="image" style="width:100%">
+        </a><br>
+      </section>
+
       <!-- Just note
 Mega menu 
 How can a custemer edit a text /or ornot image/ but not the div? or the design?
@@ -133,7 +137,14 @@ How can a custemer edit a text /or ornot image/ but not the div? or the design?
 
 
     </footer>
-
+    <h2>The <strong>family Supermarket</strong> on social media!</h2>
+    <Menu class="icon DF">
+        <a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a>
+        <a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a>
+        <a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a>
+        <a href="#" class="icon circle fa-github"><span class="label">Github</span></a>
+        <a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a>
+    </Menu>
   </main>
   <div class="copyright">
     <div>Copyright &copy; 2019 Yohannes Zewde @powercoders</div>
